# algolabra-hy

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
documentation/: maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
documentation/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
src/: game.py  main.py
src/board/: __init__.py  board.py
src/board/piece/: __init__.py  bishop.py  color.py  king.py  knight.py  move.py  pawn.py  piece.py  queen.py  rook.py
src/engine/: __init__.py  engine.py  random.py
src/game/: __init__.py  ascii.py  game.py  lichess.py
src/tests/: board_test.py  engine_test.py  move_test.py  piece_test.py
src/ui/: __init__.py  ascii.py  lichess.py
